# openpose_multiview

./: CMakeLists.txt  README.md  nite2cocopose.py
examples/: fileprocess.cpp  kinect1client.cpp  kinect1server.cpp  kinect2server.cpp  offline.cpp  online.cpp  videoprocess.cpp
include/: channel_wrapper.hpp  datawithpayload.hpp  define.h  freenect_grabber.hpp  image_frame.hpp  ipcpooledchannel.hpp  k2g.h  netutils.hpp  pooledchannel.hpp  shared_memory_log.hpp  stereo_cam.h  stereoprocess.h  utilities.hpp
python/: script.py  viz3D.py
settings/: SN14966.conf  SN1499.conf  SN1499b.conf  ZEDleft.yaml  ZEDright.yaml  stereocalib.JSON  stereocalib.json
settings/rules/: kinect2.rules  zed.rules
src/: depth_extractor.cpp  disparity_extractor.cpp  stereo_cam.cpp  stereoprocess.cpp  utilities.cpp
